# FakeSMTPd

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  NEWS.md  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  start.sh
.github/: dependabot.yml
.github/workflows/: test.yml
fakesmtpd/: args.py  commands.py  connection.py  mbox.py  server.py  smtp.py  state.py  syntax.py
fakesmtpd_test/: commands.py  connection.py  mbox.py  server.py  syntax.py
test_fakesmtpd/: commands.py  connection.py  mbox.py  syntax.py
