[tool.poetry]
name = "FakeSMTPd"
version = "2022.10.1"
description = "SMTP server for testing mail functionality"
authors = ["Sebastian Rittau <srittau@rittau.biz>"]
license = "MIT"
homepage = "https://github.com/srittau/fakesmtpd"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Communications :: Email :: Mail Transport Agents",
    "Topic :: Software Development :: Testing",
]
packages = [{ include = "fakesmtpd" }]

[tool.poetry.urls]
"GitHub" = "https://github.com/srittau/fakesmtpd"
"Bug Tracker" = "https://github.com/srittau/fakesmtpd/issues"
"Changes" = "https://github.com/srittau/fakesmtpd/blob/main/CHANGELOG.md"

[tool.poetry.scripts]
fakesmtpd = "fakesmtpd.server:main"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "~1.5.1"
pytest = ">=6.2.4,<8"
pytest-mock = ">=3.6.1"

[tool.pytest.ini_options]
python_files = ["test_*/*.py"]

[tool.black]
line-length = 79
target-version = ["py37"]

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
