[metadata]
name = FakeSMTPd
version = 2021.8.19.dev1
description = SMTP server for testing mail functionality
long_description = file: README.md
long_description_content_type = text/markdown
author = Sebastian Rittau
author_email = srittau@rittau.biz
url = https://github.com/srittau/fakesmtpd
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email :: Mail Transport Agents
    Topic :: Software Development :: Testing

[options]
packages =
    fakesmtpd
    test_fakesmtpd
scripts =
    bin/fakesmtpd
python_version = >=3.7

[options.extras_require]
tests =
    pytest>=6.2.4
    pytest-mock>=3.6.1

[flake8]
# E203: whitespace before ':' (black compatibility)
# W503 line break before binary operator (black compatibility)
ignore = E203, W503
